--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
 
+    <!-- Ios Icons -->
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+    <!-- app title -->
+    <meta name="apple-mobile-web-app-title" content="Silos4Y" />
+    <!-- enable standalone mode -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    
     <title>Silos4Y</title>
   </head>
   <body>
